# rtow-python

./: .gitignore  LICENSE  README.md  pyproject.toml
main/: app.py
src/: camera.py  helper.py  hit.py  material.py  ray.py  types.py
src/geometry/: __init__.py  primitive.py  sphere.py  world.py
src/math/: __init__.py  vector.py  vector2.py  vector3.py  vector4.py
tests/: test_camera.py  test_color.py
tests/geometry/: test_sphere.py
tests/math/: test_vector2.py  test_vector3.py  test_vector4.py
